Add Google verificationg

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,8 +18,8 @@
             <li>BMI (Body Mass Index)</li>
             <li>Smoker Status</li>
         </ul>
-        <p>There are five practice tasks to help you get accurate estimates, followed by eight main tasks.</p>
-        <p>Your performance will be measured by how many times (out of the 8 main tasks) your estimate is as good as or better than the AI’s prediction. Pay close attention to the information provided in the practice tasks and during the main tasks to improve your estimates.</p>
+        <p>There are six practice tasks to help you get accurate estimates, followed by eight main tasks.</p>
+        <p>Your performance will be measured by how many times (out of the 8 main tasks) your estimate is as good as or better than the automated algorithm’s prediction. Pay close attention to the information provided in the practice tasks and during the main tasks to improve your estimates.</p>
         <h2>Time</h2>
         <p>~10–15 minutes</p>
         <form action="{{ url_for('start') }}" method="post">
