--- a/templates/assessment.html
+++ b/templates/assessment.html
@@ -12,21 +12,33 @@
         <h1>Patient {{ customer_number }} of 8</h1>
         <p>Medical cost will generally increase as one gets older. The medical cost is slightly higher for men. Increasing the BMI will increase the chance of higher medical costs, and the medical cost for smokers is higher.</p>
         <table class="info-table">
-            <tr><th>Age</th><td>{{ customer_info['age'] }}</td></tr>
-            <tr><th>Sex</th><td>{{ customer_info['sex'] }}</td></tr>
-            <tr><th>BMI</th><td>{{ customer_info['bmi']|round(1) }}</td></tr>
-            <tr><th>Smoker</th><td>{{ customer_info['smoker'] }}</td></tr>
+            <tr>
+                <th>Age</th>
+                <td>{{ customer_info['age'] }} <span style="color: gray;">(population avg: 39)</span></td>
+            </tr>
+            <tr>
+                <th>Sex</th>
+                <td>{{ customer_info['sex'] }}</td>
+            </tr>
+            <tr>
+                <th>BMI</th>
+                <td>{{ customer_info['bmi']|round(1) }} <span style="color: gray;">(population avg: 30.7)</span></td>
+            </tr>
+            <tr>
+                <th>Smoker</th>
+                <td>{{ customer_info['smoker'] }}</td>
+            </tr>
         </table>
         <form id="guess-form" action="{{ url_for('task') }}" method="post">
             <div class="slider-container">
-                <label for="initial_guess">Estimate Medical Cost ($1–$70,000):</label>
-                <input type="range" id="initial_guess" name="initial_guess" min="1" max="70000" value="0">
+                <label for="initial_guess">Estimate Medical Cost ($1–$30,000):</label>
+                <input type="range" id="initial_guess" name="initial_guess" min="1" max="30000" value="1000">
                 <div class="slider-labels">
                     <span>$1</span>
-                    <span>$70,000</span>
+                    <span>$30,000</span>
                 </div>
-                <input type="hidden" id="initial_guess_value" name="initial_guess_value" value="0">
-                <p>Your Estimated Medical Cost: $<input type="number" id="initial_guess_number" name="initial_guess_number" min="1" max="70000" value="0"></p>
+                <input type="hidden" id="initial_guess_value" name="initial_guess_value" value="1000">
+                <p>Your Estimated Medical Cost: $<input type="number" id="initial_guess_number" name="initial_guess_number" min="1" max="30000" value="1000"></p>
             </div>
             <button type="submit">Submit Estimate</button>
         </form>
