--- a/templates/results.html
+++ b/templates/results.html
@@ -10,11 +10,11 @@
     <div class="container">
         <h1>Summary: Patient {{ customer_number }} of 8</h1>
         {% if performance_message %}
-            <p><strong>{{ performance_message }}</strong></p>
+            <p style="font-size: 18px;"><strong>{{ performance_message }}</strong></p>
         {% endif %}
-        <p>Your Initial Estimated Medical Cost: ${{ initial_guess|int }}</p>
-        <p>AI Predicted Medical Cost: ${{ ai_prediction|int }}</p>
-        <p>Your Final Estimated Medical Cost: ${{ final_guess|int }}</p>
+        <p>Your Initial Estimated Medical Cost: <strong>${{ initial_guess|int }}</strong></p>
+        <p>Automated Algorithm Predicted Medical Cost: <strong>${{ automated_algorithm_prediction|int }}</strong></p>
+        <p>Your Final Estimated Medical Cost: <strong>${{ final_guess|int }}</strong></p>
         <form action="{{ url_for('stage3') }}" method="post">
             <button type="submit">{{ 'Finish Study' if customer_number == 8 else 'Next Patient' }}</button>
         </form>
