Add Google verificationg

--- a/templates/examples.html
+++ b/templates/examples.html
@@ -57,7 +57,7 @@
 <body>
     <div class="container">
         <h1>Examples of Patient Information and Medical Charge</h1>
-        <p>Below are examples of patient information and their corresponding medical charges to help you understand the task:</p>
+        <p style="color: rgb(244, 51, 8);"> Medical cost will generally increase as one gets older. Increasing the BMI will increase the chance of higher medical costs, and the medical cost for smokers is much higher.</p>
         <div class="example-container">
             <div class="example-column">
                 <h2>Non-Smokers</h2>
